_source/css/code.css
/* ===== CODE BLOCKS ===== */

code {
  color: var(--text-code);
}

code.highlighter-rouge {
  padding: 0 1px;
  margin: 0 1px;
}

div.highlighter-rouge {
  margin: .5rem auto;
}

div.highlighter-rouge, code {
  border: 1px solid var(--text-normal-25);
  background-color: var(--text-normal-10);
  padding: 1px 2px;
  margin-left: .1rem;
  margin-right: .1rem;
  border-radius: 2px;
}

div.highlighter-rouge code, div.highlighter-rouge code span {
  background: none;
  border: none;
  white-space: pre-wrap;
}

pre.highlight {
  margin: 0;
  padding: .5rem;
}


/* ===== SYNTAX HIGHLIGHTING ===== */

.highlight .c {
  color: #f7a708;
  font-style: italic; }
.highlight .err {
  color: #a61717;
  background-color: #e3d2d2; }
.highlight .k {
  font-weight: bold; }
.highlight .o {
  font-weight: bold; }
.highlight .cm {
  color: #f7a708;
  font-style: italic; }
.highlight .cp {
  color: #f7a708;
  font-weight: bold; }
.highlight .c1 {
  color: #f7a708;
  font-style: italic; }
.highlight .cs {
  color: #f7a708;
  font-weight: bold;
  font-style: italic; }
.highlight .gd {
  color: #000;
  background-color: #fdd; }
.highlight .gd .x {
  color: #000;
  background-color: #faa; }
.highlight .ge {
  font-style: italic; }
.highlight .gr {
  color: #e15a60; }
.highlight .gh {
  color: #f7a708; }
.highlight .gi {
  color: #000;
  background-color: #dfd; }
.highlight .gi .x {
  color: #000;
  background-color: #afa; }
.highlight .go {
  color: #969696; }
.highlight .gp {
  color: #969696; }
.highlight .gs {
  font-weight: bold; }
.highlight .gu {
  color: #969696; }
.highlight .gt {
  color: #e15a60; }
.highlight .kc {
  font-weight: bold; }
.highlight .kd {
  font-weight: bold; }
.highlight .kp {
  font-weight: bold; }
.highlight .kr {
  font-weight: bold; }
.highlight .kt {
  color: #6699cc;
  font-weight: bold; }
.highlight .m {
  color: #5fb3b3; }
.highlight .s {
  color: #e15a60; }
.highlight .na {
  color: #5fb3b3; }
.highlight .nb {
  color: #6699cc; }
.highlight .nc {
  color: #6699cc;
  font-weight: bold; }
.highlight .no {
  color: #5fb3b3; }
.highlight .ni {
  color: #c594c5; }
.highlight .ne {
  color: #e15a60;
  font-weight: bold; }
.highlight .nf {
  color: #e15a60;
  font-weight: bold; }
.highlight .nn {
  color: #969696; }
.highlight .nt {
  color: #6699cc; }
.highlight .nv {
  color: #5fb3b3; }
.highlight .ow {
  font-weight: bold; }
.highlight .w {
  color: #969696; }
.highlight .mf {
  color: #5fb3b3; }
.highlight .mh {
  color: #5fb3b3; }
.highlight .mi {
  color: #5fb3b3; }
.highlight .mo {
  color: #5fb3b3; }
.highlight .sb {
  color: #e15a60; }
.highlight .sc {
  color: #e15a60; }
.highlight .sd {
  color: #e15a60; }
.highlight .s2 {
  color: #e15a60; }
.highlight .se {
  color: #e15a60; }
.highlight .sh {
  color: #e15a60; }
.highlight .si {
  color: #e15a60; }
.highlight .sx {
  color: #e15a60; }
.highlight .sr {
  color: #99c794; }
.highlight .s1 {
  color: #e15a60; }
.highlight .ss {
  color: #c594c5; }
.highlight .bp {
  color: #f7a708; }
.highlight .vc {
  color: #5fb3b3; }
.highlight .vg {
  color: #5fb3b3; }
.highlight .vi {
  color: #5fb3b3; }
.highlight .il {
  color: #5fb3b3; }

